
III) MAJOR CHANGES FROM PREVIOUS RELEASES

* Changes from 5.2.10

  1) Added support for the following printers:

        Citizen CW-01 / Olmec OP900
	Mitsubishi CP3800DW
        Kodak 305                 [experimental]
	Mitsubishi CP-D80DW       [experimental]
	Shinko S1245/S6145/S6245  [experimental]
 	Sony UP-CR10/DNP SL10     [experimental]
	Kodak 8810                [experimental]
	Canon SELPHY CP820/CP910

  2) Enhanced support (and bugfixes) for the following printers:

	DNP DS40/DS80/RX1
        Citizen CX/CX-W/CY
	Kodak 6800/6850
	Kodak 605
	Canon SELPHY CP900
	Sony UP-DR200
        Mitsubishi CP-9550 family (including the CP9550DW-S variant)
	Mitsubishi CP-D70DW/D707DW/K60DW-S [experimental]

* Changes from 5.2.9

  1) Added a unified CUPS backend to support selected dye sublimation
     printers.

     A new CUPS backend was added to support USB printers that require a
     special communications protocol. The backend is called 
     'gutenprint52usb' and requires libusb 1.0 (or newer) in order to build.

     The following dye-sublimation printers require this backend in order
     to function properly:

        Canon SELPHY ES series  (All models)  (*1)
	Canon SELPHY CP series  (All models)  (*1)
	Kodak Professional 1400
	Kodak 805 Photo Printer
   	Kodak 6800 Photo Printer
   	Kodak 6850 Photo Printer
	Kodak 605 Photo Printer
   	Shinko/Sinfonia CHC-S2145 
   	Sony UP-DR150  (*1)
        Sony UP-DR200
	DNP DS40  (*1)
	DNP DS80  (*1)
	DNP DS-RX1
	Citizen CX
	Citizen CX-W
	Citizen CY
        Mitsubishi CP-D70DW  (EXPERIMENTAL)
        Mitsubishi DP-D707DW (EXPERIMENTAL)

     *1) Please note that if you were using a Sony UP-DR150, DNP DS40/DS80,
	 or a Canon SELPHY printer with a previous Gutenprint release, 
         you will need to remove and re-create your printer queue after 
         the upgrade to 5.2.10 is complete.

     For further information about configuration and use of this CUPS 