@@ -1,5 +1,5 @@
 /*
- * "$Id: print-olympus.c,v 1.184 2015/01/21 15:17:58 speachy Exp $"
+ * "$Id: print-olympus.c,v 1.185 2015/01/22 00:35:55 speachy Exp $"
  *
  *   Print plug-in DyeSub driver (formerly Olympus driver) for the GIMP.
  *
@@ -1491,8 +1491,8 @@ static const laminate_t updr200_laminate[] =
 {
   {"Glossy",  N_("Glossy"),  {1, "\x00"}},
   {"Matte",   N_("Matte"),   {1, "\x0c"}},
-  {"Glossy - No correction",  N_("Glossy - No correction"),  {1, "\x10"}},
-  {"Matte - No correction",  N_("Matte - No correction"),  {1, "\x1c"}},
+  {"Glossy_NoCorr",  N_("Glossy_NoCorr"),  {1, "\x10"}},
+  {"Matte_NoCorr",  N_("Matte_NoCorr"),  {1, "\x1c"}},
 };
 
 LIST(laminate_list_t, updr200_laminate_list, laminate_t, updr200_laminate);
@@ -3539,6 +3539,99 @@ static void shinko_chcs6145_printer_init(stp_vars_t *v)
   stp_put32_le(0x00, v);
 }
 
+/* Ciaat Brava 21 */
+static const dyesub_pagesize_t ciaat_brava21_page[] =
+{
+  { "w144h432",	"2x6", PT(634,300)+1, PT(1844,300)+1, 0, 0, 0, 0,
+  							DYESUB_LANDSCAPE},
+  { "w288h432",	"4x6", PT(1240,300)+1, PT(1844,300)+1, 0, 0, 0, 0,
+  							DYESUB_LANDSCAPE},
+#ifdef MULTICUT
+  { "2x6_x2",	"2x6*2", PT(1240,300)+1, PT(1844,300)+1, 0, 0, 0, 0,
+  							DYESUB_LANDSCAPE},
+#endif
+  { "w360h504",	"5x7", PT(1548,300)+1, PT(2140,300)+1, 0, 0, 0, 0,
+  							DYESUB_PORTRAIT},
+  { "w432h576",	"6x8", PT(1844,300)+1, PT(2434,300)+1, 0, 0, 0, 0,
+  							DYESUB_PORTRAIT},
+#ifdef MULTICUT
+  { "4x6_x2",	"4x6*2", PT(1844,300)+1, PT(2492,300)+1, 0, 0, 0, 0,
+  							DYESUB_PORTRAIT},
+#endif
+};
+
+LIST(dyesub_pagesize_list_t, ciaat_brava21_page_list, dyesub_pagesize_t, ciaat_brava21_page);
+
+static const dyesub_printsize_t ciaat_brava21_printsize[] =
+{
+  { "300x300", "w144h432", 634, 1844},
+  { "300x300", "w288h432", 1240, 1844},
+#ifdef MULTICUT
+  { "300x300", "2x6_x2", 1240, 1844},
+#endif
+  { "300x300", "w360h504", 1548, 2140},
+  { "300x300", "w432h576", 1844, 2434},
+#ifdef MULTICUT
+  { "300x300", "4x6_x2", 1844, 2492},
+#endif
+};
+
+LIST(dyesub_printsize_list_t, ciaat_brava21_printsize_list, dyesub_printsize_t, ciaat_brava21_printsize);
+
+static const laminate_t ciaat_brava21_laminate[] =
+{
+  {"Off",  N_("Off"),  {1, "\x01"}},
+  {"Glossy",  N_("Glossy"),  {1, "\x02"}},
+  {"Matte",  N_("Matte"),  {1, "\x03"}},
+};
+
+LIST(laminate_list_t, ciaat_brava21_laminate_list, laminate_t, ciaat_brava21_laminate);
+
+static void ciaat_brava21_printer_init(stp_vars_t *v)
+{
+  int media = 0;
+
+  if (strcmp(privdata.pagesize,"w288h432") == 0)
+    media = 0x00;
+  else if (strcmp(privdata.pagesize,"2x6_x2") == 0)
+    media = 0x00;
+  else if (strcmp(privdata.pagesize,"w360h504") == 0)
+    media = 0x03;
+  else if (strcmp(privdata.pagesize,"w432h576") == 0)
+    media = 0x06;
+  else if (strcmp(privdata.pagesize,"w144h432") == 0)
+    media = 0x07;
+  else if (strcmp(privdata.pagesize,"w4x6_x2") == 0)
+    media = 0x06;
+
+  stp_putc(0x01, v);
+  stp_putc(0x40, v);
+  stp_putc(0x12, v);
+  stp_putc(0x00, v);
+  stp_putc(0x01, v);
+  stp_putc(0x01, v); /* Copies */
+  stp_putc(0x00, v);
+  stp_put16_le(privdata.w_size, v); /* Columns */
+  stp_put16_le(privdata.h_size, v); /* Rows */
+
+  stp_putc(media, v);
+
+  dyesub_nputc(v, 0x00, 6);
+  stp_putc(0x01, v);
+  
+  if (strcmp(privdata.pagesize,"2x6_x2") == 0)
+	  media = 0x04;
+  else if (strcmp(privdata.pagesize,"4x6_x2") == 0)
+	  media = 0x02;
+  else
+	  media = 0x00;  /* or 0x01 to turn off trimming */
+
+  stp_zfwrite((privdata.laminate->seq).data, 1,
+	      (privdata.laminate->seq).bytes, v); /* Lamination */
+
+  stp_putc(media, v);
+  stp_putc(0x00, v);
+}
 
 /* Dai Nippon Printing DS40 */
 static const dyesub_resolution_t res_dnpds40_dpi[] =
@@ -4720,6 +4813,20 @@ static const dyesub_cap_t dyesub_model_capabilities[] =
     NULL, NULL,  /* No blocks */
     NULL, NULL, NULL, /* Color correction in printer */
     &shinko_chcs6145_laminate_list, NULL,
+  },
+  { /* CIAAT Brava 21 */
+    5005,
+    &rgb_ink_list,
+    &res_300dpi_list,
+    &ciaat_brava21_page_list,
+    &ciaat_brava21_printsize_list,
+    SHRT_MAX,
+    DYESUB_FEATURE_FULL_WIDTH | DYESUB_FEATURE_FULL_HEIGHT,
+    &ciaat_brava21_printer_init, NULL,
+    NULL, NULL,  /* No planes */
+    NULL, NULL,  /* No blocks */
+    NULL, NULL, NULL, /* Color correction in printer */
+    &ciaat_brava21_laminate_list, NULL,
   },
   { /* Dai Nippon Printing DS40 */
     6000,
