@@ -264,6 +264,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 	Shinko S1245/S6145/S6245  [experimental]
  	Sony UP-CR10/DNP SL10     [experimental]
 	Kodak 8810                [experimental]
+	Ciaat Brava 21            [experimental]
 	Canon SELPHY CP820/CP910
 
   2) Enhanced support (and bugfixes) for the following printers:
